--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -1,10 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="28.575"
-    android:viewportHeight="28.575">
+    android:viewportWidth="12.7"
+    android:width="108dp"
+    android:viewportHeight="12.7">
     <path
-        android:pathData="m11.537,7.936c-0.964,0 -1.74,1.005 -1.74,2.254v8.195c0,1.249 0.776,2.254 1.74,2.254h5.501c0.964,0 1.74,-1.005 1.74,-2.254v-4.7l-1.891,1.891 -0.836,0.174v0.343h-4.471v-0.685h4.471v0.343l0.174,-0.836 0.165,-0.165h-4.81v-0.686h5.412v0.084l1.785,-1.785v-2.172c0,-1.249 -0.776,-2.254 -1.74,-2.254zM18.779,12.362v1.323l1.382,-1.382 -0.661,-0.661zM16.993,14.147 L16.392,14.749h0.602zM11.582,10.032h5.412v0.685h-5.412zM11.582,11.376h5.412v0.685h-5.412zM11.582,12.72h5.412v0.685h-5.412z"
-        android:strokeWidth="0.481864"
-        android:fillColor="#00ff00"/>
+        android:fillColor="#00ff00"
+        android:pathData="m5.004,3.192c-0.48,-0 -0.888,0.5 -0.888,1.121v4.075c0,0.621 0.408,1.121 0.888,1.121h2.691c0.48,0 0.888,-0.5 0.888,-1.121L8.583,6.051l-0.941,0.94 -0.415,0.086L7.227,7.248L5.004,7.248L5.004,6.907h2.223v0.17l0.087,-0.415 0.082,-0.082L5.004,6.579v-0.341h2.691v0.042L8.583,5.392L8.583,4.312c0,-0.621 -0.408,-1.121 -0.888,-1.121zM8.583,5.392L8.583,6.051L9.271,5.363 8.942,5.034ZM7.696,6.28 L7.396,6.579L7.696,6.579ZM5.004,4.234L7.696,4.234L7.696,4.574L5.004,4.574ZM5.004,4.902L7.696,4.902L7.696,5.243L5.004,5.243ZM5.004,5.57L7.696,5.57L7.696,5.911L5.004,5.911Z"
+        android:strokeWidth="0.198437" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M7.314,6.662 L7.228,7.077 7.643,6.991Z"
+        android:strokeWidth="0.135" />
 </vector>
